# proof-of-emotion

./: Cargo.toml  EXECUTION_REPORT.md  FIXES_APPLIED.md  LICENSE  PROJECT_SUMMARY.md  PUSH_INSTRUCTIONS.md  PUSH_NOW.md  QUICKSTART.md  README.md  SECURITY.md  build.bat  build.sh  push_to_github.bat  push_to_github.sh  run_all_tests.bat  run_all_tests.sh  verify.sh
.github/workflows/: rust.yml
benches/: consensus_benchmarks.rs
docs/: SPECIFICATION.md
examples/: basic_consensus.rs  basic_consensus_ascii.rs  multi_validator.rs  staking_rewards.rs  staking_rewards_ascii.rs
src/: biometric.rs  byzantine.rs  checkpoint.rs  consensus.rs  crypto.rs  error.rs  fork.rs  health.rs  lib.rs  metrics.rs  staking.rs  types.rs  utils.rs  zkp.rs
tests/: integration_tests.rs  load_tests.rs  property_tests.proptest-regressions  property_tests.rs
